fixed joystick, added two-way communication

--- a/kobuki/app/src/main/res/values/strings.xml
+++ b/kobuki/app/src/main/res/values/strings.xml
@@ -1,8 +1,7 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="server_ip">Server IP</string>
     <string name="message">Message</string>
-    <string name="send">SEND</string>
-    <string name="close">CLOSE</string>
-    <string name="connect">CONNECT</string>
+    <string name="send">CONNECT</string>
+    <string name="close">RESET</string>
+    <string name="connect">TEST</string>
 </resources>
